--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -28,4 +28,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add cleaned_calendar.ics
           git commit -m "Auto-update calendar" || echo "No changes"
-          git push
+          git push https://${{ secrets.make_it_work }}@github.com/${{ github.repository }}.git
