--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,31 +1,28 @@
 name: Update ADE Calendar
-
 on:
   schedule:
-    - cron: '0 5 * * *'  # Every day at 5 AM UTC
-  workflow_dispatch:      # Allow manual run
-
+    - cron: '0 6,10,14,18 * * *'  
+    - cron: '0 12 * * *'         
+  workflow_dispatch:
 jobs:
   build:
+    concurrency: calendar_update  
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-
       - name: Run calendar filter
         run: |
           pip install requests
           python filter_calendar.py
-
       - name: Commit and push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add cleaned_calendar.ics
           git commit -m "Auto-update calendar" || echo "No changes"
-          git push origin main 
+          git push origin main
